src/msg/snapshots/tmi__msg__user_notice__tests__parse_giftpaidupgrade_with_promo.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@badge-info=subscriber/1;badges=subscriber/0,premium/1;color=#8A2BE2;display-name=samura1jack_ttv;emotes=;flags=;id=144ee636-0c1d-404e-8b29-35449a045a7e;login=samura1jack_ttv;mod=0;msg-id=anongiftpaidupgrade;room-id=71092938;subscriber=1;system-msg=samura1jack_ttv\\\\sis\\\\scontinuing\\\\sthe\\\\sGift\\\\sSub\\\\sthey\\\\sgot\\\\sfrom\\\\san\\\\sanonymous\\\\suser!;tmi-sent-ts=1594327421732;user-id=102707709;user-type= :tmi.twitch.tv USERNOTICE #xqcow\")"
---
UserNotice {
    channel: Channel(
        "#xqcow",
    ),
    channel_id: "71092938",
    sender: None,
    text: None,
    system_message: Some(
        "samura1jack_ttv\\sis\\scontinuing\\sthe\\sGift\\sSub\\sthey\\sgot\\sfrom\\san\\sanonymous\\suser!",
    ),
    event: AnonGiftPaidUpgrade(
        AnonGiftPaidUpgrade {
            promotion: None,
        },
    ),
    event_id: "anongiftpaidupgrade",
    badges: [
        Subscriber(
            Subscriber {
                version: "0",
                months: "1",
                months_n: 1,
            },
        ),
        Other(
            BadgeData {
                name: "premium",
                version: "1",
                extra: None,
            },
        ),
    ],
    emotes: "",
    color: Some(
        "#8A2BE2",
    ),
    message_id: "144ee636-0c1d-404e-8b29-35449a045a7e",
    timestamp: 2020-07-09T20:43:41.732Z,
}
