src/msg/snapshots/tmi__msg__user_notice__tests__parse_resub.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@badge-info=subscriber/2;badges=subscriber/0,battlerite_1/1;color=#0000FF;display-name=Gutrin;emotes=1035663:0-3;flags=;id=e0975c76-054c-4954-8cb0-91b8867ec1ca;login=gutrin;mod=0;msg-id=resub;msg-param-cumulative-months=2;msg-param-months=0;msg-param-should-share-streak=1;msg-param-streak-months=2;msg-param-sub-plan-name=Channel\\\\sSubscription\\\\s(xqcow);msg-param-sub-plan=1000;room-id=71092938;subscriber=1;system-msg=Gutrin\\\\ssubscribed\\\\sat\\\\sTier\\\\s1.\\\\sThey've\\\\ssubscribed\\\\sfor\\\\s2\\\\smonths,\\\\scurrently\\\\son\\\\sa\\\\s2\\\\smonth\\\\sstreak!;tmi-sent-ts=1581713640019;user-id=21156217;user-type= :tmi.twitch.tv USERNOTICE #xqcow :xqcL\")"
---
UserNotice {
    channel: "#xqcow",
    channel_id: "71092938",
    sender: Some(
        User {
            id: "21156217",
            login: "gutrin",
            name: "Gutrin",
        },
    ),
    text: Some(
        "xqcL",
    ),
    system_message: Some(
        "Gutrin\\ssubscribed\\sat\\sTier\\s1.\\sThey've\\ssubscribed\\sfor\\s2\\smonths,\\scurrently\\son\\sa\\s2\\smonth\\sstreak!",
    ),
    event: SubOrResub(
        SubOrResub {
            is_resub: true,
            cumulative_months: 2,
            streak_months: Some(
                2,
            ),
            sub_plan: "1000",
            sub_plan_name: "Channel\\sSubscription\\s(xqcow)",
        },
    ),
    event_id: "resub",
    badges: [
        Subscriber(
            Subscriber {
                version: "0",
                months: "2",
                months_n: 2,
            },
        ),
        Other(
            BadgeData {
                name: "battlerite_1",
                version: "1",
                extra: None,
            },
        ),
    ],
    emotes: "1035663:0-3",
    color: Some(
        "#0000FF",
    ),
    message_id: "e0975c76-054c-4954-8cb0-91b8867ec1ca",
    timestamp: 2020-02-14T20:54:00.019Z,
}
