src/msg/snapshots/tmi__msg__user_notice__tests__parse_ritual.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@badge-info=;badges=;color=;display-name=SevenTest1;emotes=30259:0-6;id=37feed0f-b9c7-4c3a-b475-21c6c6d21c3d;login=seventest1;mod=0;msg-id=ritual;msg-param-ritual-name=new_chatter;room-id=6316121;subscriber=0;system-msg=Seventoes\\\\sis\\\\snew\\\\shere!;tmi-sent-ts=1508363903826;turbo=0;user-id=131260580;user-type= :tmi.twitch.tv USERNOTICE #seventoes :HeyGuys\")"
---
UserNotice {
    channel: Channel(
        "#seventoes",
    ),
    channel_id: "6316121",
    sender: Some(
        User {
            id: "131260580",
            login: "seventest1",
            name: "SevenTest1",
        },
    ),
    text: Some(
        "HeyGuys",
    ),
    system_message: Some(
        "Seventoes is new here!",
    ),
    event: Ritual(
        Ritual {
            name: "new_chatter",
        },
    ),
    event_id: "ritual",
    badges: [],
    emotes: "30259:0-6",
    color: None,
    message_id: "37feed0f-b9c7-4c3a-b475-21c6c6d21c3d",
    timestamp: 2017-10-18T21:58:23.826Z,
}
