src/msg/snapshots/tmi__msg__user_notice__tests__parse_sub.snap
---
source: src/msg/user_notice.rs
expression: "f(\"@badge-info=subscriber/0;badges=subscriber/0,premium/1;color=;display-name=fallenseraphhh;emotes=;flags=;id=2a9bea11-a80a-49a0-a498-1642d457f775;login=fallenseraphhh;mod=0;msg-id=sub;msg-param-cumulative-months=1;msg-param-months=0;msg-param-should-share-streak=0;msg-param-sub-plan-name=Channel\\\\sSubscription\\\\s(xqcow);msg-param-sub-plan=Prime;room-id=71092938;subscriber=1;system-msg=fallenseraphhh\\\\ssubscribed\\\\swith\\\\sTwitch\\\\sPrime.;tmi-sent-ts=1582685713242;user-id=224005980;user-type= :tmi.twitch.tv USERNOTICE #xqcow\")"
---
UserNotice {
    channel: "#xqcow",
    channel_id: "71092938",
    sender: Some(
        User {
            id: "224005980",
            login: "fallenseraphhh",
            name: "fallenseraphhh",
        },
    ),
    text: None,
    system_message: Some(
        "fallenseraphhh\\ssubscribed\\swith\\sTwitch\\sPrime.",
    ),
    event: SubOrResub(
        SubOrResub {
            is_resub: false,
            cumulative_months: 1,
            streak_months: None,
            sub_plan: "Prime",
            sub_plan_name: "Channel\\sSubscription\\s(xqcow)",
        },
    ),
    event_id: "sub",
    badges: [
        Subscriber(
            Subscriber {
                version: "0",
                months: "0",
                months_n: 0,
            },
        ),
        Other(
            BadgeData {
                name: "premium",
                version: "1",
                extra: None,
            },
        ),
    ],
    emotes: "",
    color: None,
    message_id: "2a9bea11-a80a-49a0-a498-1642d457f775",
    timestamp: 2020-02-26T02:55:13.242Z,
}
